src/App.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap');

@font-face {
    font-family: 'Handwritten';
    src: url(/fonts/Excalifont.woff2);
}

#root {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: visible;
}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
    height: 100vh;
    background-size: 400px;
    background-color: rgb(218, 211, 205);
    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url(/textures/paper-texture.png);
    overflow: hidden;
}

body {
    cursor: url('/cursor/hand1.png') 0 0, auto;
}

body.cursor-toggle {
    cursor: url('/cursor/hand2.png') 0 0, auto;
}

a,
button,
.pull-tab,
.nav-button.coming-soon {
    cursor: url('/cursor/point1.png') 0 0, pointer;
}

body.cursor-toggle a,
body.cursor-toggle button,
body.cursor-toggle .pull-tab,
body.cursor-toggle .nav-button.coming-soon {
    cursor: url('/cursor/point2.png') 0 0, pointer;
}

body:active {
    cursor: url('/cursor/point1.png') 0 0, pointer;
}

body.cursor-toggle:active {
    cursor: url('/cursor/point2.png') 0 0, pointer;
}

ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

li {
    padding: 0;
    margin: 0;
}

.main-wrapper {
    display: flex;
    flex: 1;
    overflow: visible;
    position: relative;
}

/* --- HEADER --- */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-buttons-container {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 11;
    width: 100%;
    height: 100px;
    pointer-events: none;
}

.header-buttons-container>* {
    pointer-events: auto;
}

.header-button {
    border: none;
    background-color: transparent;
}

.resume-button {
    height: 75px;
    width: 180px;
    background-size: 180px 75px;
    background-image: url(/buttons/resume-button.png);
    position: absolute;
    top: 24px;
    left: 129px;
    z-index: 6;
    opacity: 0.92;
    transition: scale 0.3s ease, top 0.2s ease-out, left 0.25s ease-in, opacity 0.25s ease;
}

.resume-button:hover {
    box-shadow: none;
    scale: 1.035;
}

.header-buttons-container:has(.socials-button.open) .resume-button {
    left: 610px;
}

body:has(.nav-bar.closed) .header-buttons-container.scrolled .resume-button {
    top: 24px;
    left: 12px;
    opacity: 0.65;
}

body:has(.nav-bar.closed) .header-buttons-container.scrolled:has(.socials-button.open) .resume-button {
    left: 12px;
}

body:has(.nav-bar.closed) .header-buttons-container.scrolled .resume-button:hover {
    opacity: 1;
}

.socials-button-container {
    display: flex;
    align-items: center;
    position: absolute;
    top: 12px;
    left: 12px;
    transition: top 0.25s ease-in-out, opacity 0.25s ease;
}

body:has(.nav-bar.closed) .header-buttons-container.scrolled .socials-button-container {
    top: 112px;
    opacity: 0.65;
}

body:has(.nav-bar.closed) .header-buttons-container.scrolled .socials-button-container:hover,
body:has(.nav-bar.closed) .header-buttons-container.scrolled .socials-button-container:has(.socials-button.open) {
    opacity: 1;
}

.socials-button {
    height: 95px;
    width: 95px;
    background-size: 95px 95px;
    background-image: url(/buttons/socials-button.png);
    z-index: 5;
    transition: rotate 0.4s ease-in-out, scale 0.3s ease, filter 0.3s ease;
}

.socials-button.open {
    rotate: -90deg;
}

.socials-button:hover {
    scale: 1.04;
}

.socials-bar {
    width: 492px;
    height: 80px;
    box-sizing: border-box;
    border-top-right-radius: 36px;
    border-bottom-right-radius: 36px;
    transform: translate(-25px);
    z-index: 1;
    display: flex;
    align-items: center;
    justify-content: end;
    border: 1px solid rgba(0, 0, 0, 0.2);
    gap: 24px;
    background-color: #eeeeecc8;
    background-image: url(/textures/paper-buttons-60p.png);
    background-size: auto 100%;
    background-position: right center;
    background-repeat: repeat-x;
    box-shadow: 0 0 24px rgba(0, 0, 0, .2);
    max-width: 0;
    padding-right: 0;
    overflow: hidden;
    transition: max-width 0.4s ease-in-out, padding-right 0.4s ease-in-out, border-color 0.4s ease-in-out;
}

.socials-bar.open {
    max-width: 520px;
    padding-right: 20px;
    border-color: rgba(0, 0, 0, 0.2);
}

.socials-icon {
    height: 52px;
    width: 52px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.9;
    flex-shrink: 0;
    transition: transform .2s ease-in-out;
}

.socials-icon:hover {
    transform: scale(1.03);
}

.socials-icon.flickr {
    background-image: url(/icons/flickr.png);
}

.socials-icon.letterboxd {
    background-image: url(/icons/letterboxd.png);
}

.socials-icon.instagram {
    background-image: url(/icons/instagram.png);
}

.socials-icon.spotify {
    background-image: url(/icons/spotify.png);

}

.socials-icon.linkedin {
    background-image: url(/icons/linkedin.png);
    scale: 0.96;
}

.socials-icon.github {
    background-image: url(/icons/github.png);
    transform: translateX(-3px) scale(1.01);
}

.socials-icon.github:hover {
    transform: translateX(-3px) scale(1.04);
}

.mail-button {
    width: 136px;
    height: 46px;
    background-image: url(/buttons/mail-icon.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    position: absolute;
    top: 36px;
    right: -8px;
    z-index: 10;
    transition: scale .2s ease, filter .2s ease, rotate .2s ease, translate .4s ease, opacity .4s;
    opacity: 0.9;
    color: black;
}

.mail-button:hover {
    scale: 1.05;
    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.1));
    rotate: 2deg;
}
/* ... */

